
[metadata]
name = python-izone
author = Penny Wood
author_email = pypl@ninjateaparty.com
description = A python interface to the iZone airconditioner controller
long_description= file: README.md
long_description_content_type= text/markdown
keywords=
    iZone
    IoT
url= https://github.com/Swamp-Ig/pizone
licence = GPLv3+
license_files = licence.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Home Automation
    Topic :: System :: Hardware


[options]
python_requires = >=3.9
packages=pizone
platforms = any
setup_requires = setuptools_scm
install_requires =
    aiohttp>=3.4
    netifaces
    async_timeout

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-aio
    pytest-aiohttp
all =
    %(test)s
